--- a/src/App.css
+++ b/src/App.css
@@ -167,3 +167,18 @@ p {
 .scrollbutton:hover {
 background-color: #555; /* Add a dark-grey background on hover */
 }
+
+.heading-content{
+  display: inline;
+  font-size: 20px;
+  font-family:'wire one', serif;
+  font-weight:normal;
+  margin-right: 20px;
+}
+
+.img-header{
+  float: right;
+  margin-right: 20px;
+  width: 30px;
+  height: 30px;
+}
