--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   text-align: center;
-  font-family: system-ui, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 }
@@ -57,18 +57,31 @@ button:hover {
   color:#823A9C;
 }
 
+.cv-link{
+  font-size: 25px;
+  color: #000;
+}
+
 h1 {
   text-align:center;
   font-size:80px;
-  font-family:'wire one', serif;
   font-weight:normal;
 }
 
 h2 {
   text-align:center;
   font-size:50px;
-  font-family:'wire one', serif;
   font-weight:normal;
+}
+
+.projects-heading{
+  text-align:center;
+  font-size: 50px;
+  font-weight:normal;
+}
+
+.projects-p{
+  margin-top: -30px;
 }
 
 .contact-me {
@@ -82,15 +95,14 @@ h2 {
 .joke-intro{
   text-align:center;
   font-size: 30px;
-  font-family:'wire one', serif;
   font-weight:normal;
   margin-bottom: 100px;
+  margin-top: 100px;
 }
 
 .joke{
   text-align:center;
   font-size: 30px;
-  font-family:'wire one', serif;
   font-weight:normal;
   margin-top: 100px;
 }
@@ -179,7 +191,6 @@ background-color: #555; /* Add a dark-grey background on hover */
 .heading-content{
   display: inline;
   font-size: 20px;
-  font-family:'wire one', serif;
   font-weight:normal;
   margin-right: 20px;
 }
@@ -192,19 +203,15 @@ background-color: #555; /* Add a dark-grey background on hover */
 }
 
 .carousel{
-  margin-top: 100px;
-  align-items: center;
   margin-bottom: -100px;
 }
 
-.cover-up{
-  border-style: solid;
-  border-color: #ffffff;
-  border-width: 40px;
-  margin-top:-40px;
-  width: 100%;
-  position: absolute;
-  z-index: 1000;
+.alice-carousel__prev-btn-item{
+  float:left;
+}
+
+.alice-carousel__next-btn-item{
+  float:right;
 }
 
 .form {
